# dfs-optimizer

./: .gitignore  README.md  draftkings.csv  main.py  playoff-one-per-team.py  playoff.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
.run/: Generate lineups.run.xml
tests/: draftkings.csv  test_things.py
