[project]
name = "dfs-optimizer"
version = "0.1.0"
description = "DraftKings lineup optimizer using linear programming"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas==2.3.3",
    "pulp==3.3.0",
    "pydantic==2.12.4",
    "pytest==9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
